# my-knowledge-base

./: .claudeignore  .gitignore  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
.claude/skills/query-drafts/: SKILL.md
.claude/skills/test-md/: SKILL.md
.github/workflows/: deploy.yml  publish-drafts.yml  sync.yml
drafts/: 2026.02.16.md  claude_config.md  summary.md
notes/: index.md
notes/.vitepress/: config.mjs
notes/10-Computer-Science/: Claude AI LLM Token效率與知識管理深度優化策略.md  Claude AI 知識內化與 Token 優化策略.md  Claude LLM Token 優化策略：深度知識內化與成本效益分析.md  HTTP Session 管理機制與安全性實踐.md  HTTP Session 管理機制：深度解析與安全實踐.md  Homebrew 軟體包管理工具：原理、實踐與管理.md  LLM Context Window與Token消耗深度優化策略.md  大型語言模型上下文管理與令牌成本優化策略.md
notes/12-AI-ML/: CLAUDE.md 專案上下文配置指南：AI 編程工具的智慧協作核心.md  Claude AI 知識整理與 Token 優化策略.md  Claude.ai Projects 知識整理工作流完整指南.md  LLM 對話知識內化與 Token 優化策略.md
notes/15-Dev-Tools/: Claude AI 對話知識內化與 Token 成本優化策略.md  Claude AI 深度知識內化：智慧整理策略與 Token 消耗優化.md  Claude Code CLI - 企業級 Git Repo 學習與開發完整指南.md  Claude.ai 智慧助手知識管理工作流與最佳實踐.md  Homebrew 軟體包管理：核心原理、Formula 與 Cask 實踐指南.md
tools/: query_drafts.py  test_md_convert.py
utils/: ai_organizer.py  categories.py  clients.py  constants.py  draft_publisher.py  github_sync.py  md_to_notion.py  notion_languages.py  notion_reader.py  notion_writer.py  organize_and_sync.py  organize_and_sync_v1.py  prompts.py
